crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@193.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,5)}' <@ '{[1,5)}'::nummultirange;"
---
SelectStmt@0..45
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    AExpr@7..44
      AConst@7..16
        Sconst@7..16 "'{[1,5)}'"
      Whitespace@16..17 " "
      Op@17..19 "<@"
      Whitespace@19..20 " "
      TypeCast@20..44
        AConst@20..29
          Sconst@20..29 "'{[1,5)}'"
        Typecast@29..31 "::"
        TypeName@31..44
          Ident@31..44 "nummultirange"
  Ascii59@44..45 ";"

