crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@194.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,5)}' <@ '{[-4,-2), [1,5)}'::nummultirange;"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..53
    AExpr@7..53
      AConst@7..16
        Sconst@7..16 "'{[1,5)}'"
      Whitespace@16..17 " "
      Op@17..19 "<@"
      Whitespace@19..20 " "
      TypeCast@20..53
        AConst@20..38
          Sconst@20..38 "'{[-4,-2), [1,5)}'"
        Typecast@38..40 "::"
        TypeName@40..53
          Ident@40..53 "nummultirange"
  Ascii59@53..54 ";"

