crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@198.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(1,2)) <@ numrange(null,null);"
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..57
    AExpr@7..57
      FuncCall@7..33
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "1"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "2"
      Ascii41@33..34 ")"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Op@36..38 "<@"
      Whitespace@38..39 " "
      FuncCall@39..57
        Ident@39..47 "numrange"
        Ascii40@47..48 "("
        AConst@48..52
          NullP@48..52 "null"
        Ascii44@52..53 ","
        AConst@53..57
          NullP@53..57 "null"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

